--- a/src/ui/styles/_media-queries.scss
+++ b/src/ui/styles/_media-queries.scss
@@ -1,5 +1,5 @@
 $small-max-width: 767px;
-$small-screen-query: "only screen and (max-width: " + $small-max-width + ")";
+$small-screen-query: "(max-width: " + $small-max-width + ")";
 
 @mixin for-small-screens {
   @media #{$small-screen-query} {
